--- a/style/protfolio.css
+++ b/style/protfolio.css
@@ -55,7 +55,15 @@ nav ul li a{
     border-radius: 5px;
     border: none;
 }
+/* shared styke  */
+
+.text-center{
+    text-align: center;
+}
 /* bannar  */
+.secondary-bg{
+    background-color: #FFF8F3;
+}
 .bannar{
     display: flex;
     justify-content: space-between;
@@ -81,3 +89,84 @@ nav ul li a{
 .bannar-profle-pic{
     width: 580px;
 }
+
+
+/* main section */
+main{
+    max-width:1140px;
+    margin: 0px auto;
+}
+
+
+/* about styles */
+.section-tittle{
+    font-size:35px;
+    font-weight:bold;
+    color: #181818;
+}
+.tittle-description{
+    font-size: 18px;
+    color: #757575;
+}
+.about{
+    border-radius: 10px;
+    padding: 130px 156px;
+    margin-top: 130px;
+    text-align: center;
+}
+.about-item{
+    display: flex;
+    justify-content: space-around;
+}
+.item-description{
+    font-weight: 600;
+}
+/* what i do */
+.skills{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+
+.section-tittle{ 
+}
+.section-description{
+    
+}
+/* skills section */
+.skill{
+    display: flex;
+    gap: 24px;}
+  
+ .skill-container{
+    padding: 33px;
+    box-shadow:0px 6px 50px rgba(0, 0, 0, 0.06);
+}
+
+/* resume container section */
+
+ .resume-container{
+    display: flex;
+    gap:24px;
+ }
+ .experience-discription{
+    font-size: 16px;
+    color: #757575;
+ }
+ .experience-sub-tittle{
+    font-size:600;
+    color: #757575;
+    margin-bottom:20px;
+ }
+ .experience-tittle{
+    font-size: 25px;
+    color:#474747;
+ }
+ .experience{
+    margin: 30px;
+ }
+ /* button */
+
+ .btn-primary{
+    margin-top:50px;
+    
+ }
