added footer images

--- a/style/protfolio.css
+++ b/style/protfolio.css
@@ -143,6 +143,9 @@ main{
 }
 
 /* resume container section */
+.resume-column{
+    margin: 10px;
+}
 
  .resume-container{
     display: flex;
@@ -151,6 +154,9 @@ main{
  .experience-discription{
     font-size: 16px;
     color: #757575;
+ }
+ .resume-column-tittle{
+    
  }
  .experience-sub-tittle{
     font-size:600;
@@ -162,11 +168,32 @@ main{
     color:#474747;
  }
  .experience{
-    margin: 30px;
+    
+    margin-right: 50px;
  }
  /* button */
 
- .btn-primary{
-    margin-top:50px;
-    
- }
+  .resume-download-cv{
+    margin-top: 100px;
+  }
+  /* footer styls */
+  footer{
+    padding: 130px 230px;
+    display: flex;
+    gap: 100px;
+  }
+  .footer-column{
+    width: 50%;
+  }
+  footer input[type="text"],input[type="email"],footer textarea{
+    font-size: 18px;
+    height: 64px;
+    border: radius 5px;
+    background-color: white;
+    display: block;
+    width: 80%;
+    margin-bottom: 25px;
+    padding: 10px 20px;
+
+
+  }
